infrastructure/configs/production/external-services/proxmox/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
  namespace: external-services
subsets:
  - addresses:
      - ip: 10.0.40.20
    ports:
      - name: https
        port: 8006
        protocol: TCP
