infrastructure/configs/production/external-services/proxmox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: external-services
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: external-services-proxmox-transport@kubernetescrd
spec:
  ports:
    - name: https
      port: 8006
      targetPort: 8006
      protocol: TCP
