infrastructure/configs/production/external-services/proxmox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  namespace: external-services
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: proxmox.ronaldlokers.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxmox
                port:
                  name: https
  tls:
    - hosts:
        - proxmox.ronaldlokers.nl
